--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <title>My html/css first project</title>
 </head>
 <body>
+    <h2>Audio video</h2>
+    <audio controls src="audio/Goat-Baby-Bah-A-www.fesliyanstudios.com.mp3"></audio>
 
+    <video controls width="300px" src="video/pexels-thirdman-5538262 (1080p).mp4"></video>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/KmDLj7i06KY?si=L0bGGrA98uwWP8ca" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29176.70333340424!2d90.25607235000001!3d23.921940699999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755e9edefc0469d%3A0x405b65d31a1f445e!2sSENA%20Shopping%20Complex!5e0!3m2!1sen!2sbd!4v1704482835545!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
